--- a/style.css
+++ b/style.css
@@ -222,3 +222,16 @@ body {
         flex-direction: column;
     }
 }
+body.single .site-main {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 20px;
+}
+
+body.single .site-main .single-post {
+    flex: 3;
+}
+
+body.single .site-main .site-sidebar {
+    flex: 1;
+}
