--- a/style.css
+++ b/style.css
@@ -116,8 +116,8 @@ body {
 /* --- BBC Grid --- */
 .main-bbc-grid {
     display: grid;
-    grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
-    gap: 20px;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: 10px;
     margin-bottom: 40px;
 }
 
